force-app/main/default/objects/npsp4hub__Opportunity_Installment_Field_Mapping__c/npsp4hub__Opportunity_Installment_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Opportunity Installment Field Mapping</label>
</CustomObject>