force-app/main/default/objects/npsp4hub__Opportunity_Installment_Field_Mapping__c/fields/npsp4hub__Custom_Mapping__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Custom_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>custom mappings can be modified by customer</description>
    <label>Custom mapping</label>
    <type>Checkbox</type>
</CustomField>