force-app/main/default/objects/npsp4hub__Opportunity_Installment_Field_Mapping__c/fields/npsp4hub__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>