force-app/main/default/objects/npsp4hub__Opportunity_Installment_Field_Mapping__c/fields/npsp4hub__Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Opportunity_Field__c</fullName>
    <label>Opportunity Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>