force-app/main/default/objects/npsp4hub__Opportunity_Installment_Field_Mapping__c/fields/npsp4hub__Synchronization_Direction__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Synchronization_Direction__c</fullName>
    <label>Synchronization Direction</label>
    <length>40</length>
    <type>Text</type>
</CustomField>